--- a/app/application/help-center/style.css
+++ b/app/application/help-center/style.css
@@ -1,5 +1,5 @@
 .faq-section {
-    background: #fdfdfd;
+    background: #000000;
     min-height: 100vh;
     padding: 10vh 0 0;
 }
@@ -26,7 +26,7 @@
 }
 
 .faq {
-  background: #FFFFFF;
+  background: #212121;
   box-shadow: 0 2px 48px 0 rgba(0, 0, 0, 0.06);
   border-radius: 4px;
 }
@@ -60,7 +60,7 @@
   font-weight: 400;
   font-size: 15px;
   letter-spacing: 1px;
-  color: #3B566E;
+  color: #ffffff;
   text-decoration: none !important;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
