--- a/app/application/help-center/style.css
+++ b/app/application/help-center/style.css
@@ -96,7 +96,7 @@
   color: #6F8BA4;
   line-height: 28px;
   letter-spacing: 1px;
-  border-top: 1px solid #F3F8FF;
+  border-top: 1px solid #E91E63;
 }
 
 .faq .card .card-body p {
